# coins

./: .gitignore  Makefile.am  README.md  configure.ac  dummy_cred.h
m4/: sxe-events.m4
snap/: snapcraft.yaml
src/: Makefile.am  bitfin.c  bitfin.yuck  bitfin2b.c  bitfin2b.yuck  bitmex.c  bitmex.yuck  bitso.c  bitso.yuck  blinkwss.c  blinkwss.yuck  bncwss.c  bncwss.yuck  btcc.c  btcc.yuck  btcc2b.c  btcc2b.yuck  btsp.c  btsp.yuck  btsp2b.c  btsp2b.yuck  cbix.c  cbix.yuck  cex2b.c  cex2b.yuck  cexwss.c  cexwss.yuck  coin.c  coin.yuck  coin2b.c  coin2b.yuck  coinfl.c  coinfl.yuck  deribit.c  deribit.yuck  derifix.c  ecp.c  ecp.h  fast.c  fast.yuck  (+46 more)
